--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.20.2",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.5",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.3",
+    "@types/node-fetch": "^2.6.12",
     "jest": "^29.6.2",
     "ts-jest": "^29.1.2",
     "typescript": "^5.3.3"
